--- a/breakable-backend/package.json
+++ b/breakable-backend/package.json
@@ -23,8 +23,10 @@
     "koa-json": "^2.0.2",
     "koa-mongo": "^1.6.0",
     "koa-router": "^7.4.0",
+    "koa-static": "^5.0.0",
     "mongoose": "^5.4.19",
-    "react": "^16.8.5"
+    "react": "^16.8.5",
+    "save": "^2.3.3"
   },
   "devDependencies": {
     "nodemon": "^1.18.10"
