--- a/breakable-backend/package.json
+++ b/breakable-backend/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "koa": "^2.7.0",
     "koa-body": "^4.1.0",
+    "koa-bodyparser": "^4.2.1",
     "koa-json": "^2.0.2",
     "koa-mongo": "^1.6.0",
     "koa-router": "^7.4.0",
