renamed folders to backend and frontend

--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,8 @@
 /node_modules
 /.pnp
 .pnp.js
-/breakable-backend/node_modules
-/breakable-front/node_modules
+/backend/node_modules
+/frontend/node_modules
 
 
 # testing
